--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 </audio>
                 <div class="controls my-3">
                     <button id="prev" class="music-btn p-2"><i class="fa fa-arrow-left"></i></button>
-                    <button id="play" class="music-btn p-2"><i class="fa fa-play"></i></button>
+                    <button id="play" class="music-btn p-2"><i id="play-icon" class="fa fa-play"></i></button>
                     <button id="next" class="music-btn p-2"><i class="fa fa-arrow-right"></i></button>
                     <button id="repeat" class="music-btn p-2"><i class="fa fa-rotate-right"></i></button>
                     <button id="shuffle" class="music-btn p-2">shuffle</button>
