--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
             <div class="CRD py-3">
                 <h3 style="text-shadow: 2px 2px 4px rgb(25, 25, 25);">BMI Calculation</h2>
                     <p> Weight (Kg) : <span id="value-rng-w">70</span></p>
-                    <input style="width: 80%;" type="range" min="1" max="250" value="70" id="range-inp-w">
+                    <input style="width: 80%;" type="range" min="10" max="250" value="70" id="range-inp-w">
 
                     <p>Height (Cm) : <span id="value-rng-h">170</span></p>
-                    <input style="width: 80%;" type="range" min="1" max="250" value="170" id="range-inp-h">
+                    <input style="width: 80%;" type="range" min="100" max="250" value="170" id="range-inp-h">
                     <div>
                         <h4 style="text-shadow: 2px 2px 2px rgb(126, 126, 126)">
                             BMI:
@@ -40,22 +40,24 @@
     </div>
 
     <!-- section music player -->
-    <div class="music-img row justify-content-center">
-        <img id="audio-img" src="track1.png" alt="">
-    </div>
-    <div style="z-index: 1;" class="row justify-content-center">
-        <div class="col-md-5 col-12 text-center ">
-            <div class="player CRD py-3">
-                <audio style="margin-top: 110px;" id="audio" controls>
-                    <source id="audioSource" src="track1.mp3" type="audio/mpeg">
-                    مرورگر شما از تگ audio پشتیبانی نمی‌کند.
-                </audio>
-                <div class="controls my-3">
-                    <button id="prev" class="music-btn p-2"><i class="fa fa-arrow-left"></i></button>
-                    <button id="play" class="music-btn p-2"><i id="play-icon" class="fa fa-play"></i></button>
-                    <button id="next" class="music-btn p-2"><i class="fa fa-arrow-right"></i></button>
-                    <button id="repeat" class="music-btn p-2"><i class="fa fa-rotate-right"></i></button>
-                    <button id="shuffle" class="music-btn p-2">shuffle</button>
+    <div style="margin-top: -100px;">
+        <div class="music-img row justify-content-center">
+            <img id="audio-img" src="track1.png" alt="">
+        </div>
+        <div style="z-index: 1;" class="row justify-content-center">
+            <div class="col-md-5 col-12 text-center ">
+                <div class="player CRD py-3">
+                    <audio style="margin-top: 110px;" id="audio" controls>
+                        <source id="audioSource" src="track1.mp3" type="audio/mpeg">
+                        مرورگر شما از تگ audio پشتیبانی نمی‌کند.
+                    </audio>
+                    <div class="controls my-3">
+                        <button id="prev" class="music-btn p-2"><i class="fa fa-arrow-left"></i></button>
+                        <button id="play" class="music-btn p-2"><i id="play-icon" class="fa fa-play"></i></button>
+                        <button id="next" class="music-btn p-2"><i class="fa fa-arrow-right"></i></button>
+                        <button id="repeat" class="music-btn p-2"><i class="fa fa-rotate-right"></i></button>
+                        <button id="shuffle" class="music-btn p-2">shuffle</button>
+                    </div>
                 </div>
             </div>
         </div>
